fix: 安全泄露修复 + 部署配置优化
Phase 0 - 安全修复:
- 清除 .env.example/docker-compose.yml/application.yml 中的明文 API Key
- 统一默认模型为小米 mimo-v2.5-pro
- .env.example Base URL 去掉 /v1 后缀

Phase 1 - 架构基础:
- CorsConfig 改为环境变量 CORS_ALLOWED_ORIGINS 配置
- 前端 defaultConfig() 去掉硬编码 API Key 和 Render URL
- 添加 showFirstTimeSetup() 首次配置引导弹窗
- 删除 src/main/resources/static/ 重复前端文件

Phase 3 - Dockerfile:
- 添加 HEALTHCHECK 探活 /api/health
- 添加 JVM 调优参数 (MaxRAMPercentage=75, G1GC)